<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_create_meeting_inputedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title of Meeting"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choose_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Open Time Picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_create_meeting_inputedittext" />

    <TextView
        android:id="@+id/hour_selected_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Hour selected"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_time_button"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/choose_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Open Date Picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hour_selected_textView" />

    <TextView
        android:id="@+id/date_selected_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date selected"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_date_button"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/participant_create_meeting_inputedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Participants of Meeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_time_button" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/room_name_create_meeting_inputedittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Name room of Meeting"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/participant_create_meeting_inputedittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>