<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter_menu_item"
        android:title="Filter"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/filter_today"
                android:title="Today" />
            <item
                android:id="@+id/search_room"
                android:title="search room"
                app:actionViewClass="androidx.appcompat.widget.SearchView"
                app:showAsAction="ifRoom|collapseActionView"
                />
            <item
                android:id="@+id/filter_reset"
                android:title="Reset Filter" />
        </menu>
    </item>
</menu>
